force-app/main/default/objects/Booking_Line_Item__c/fields/CCR__c.field-meta.xml
<CustomField>
    <fullName>CCR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCR</label>
    <referenceTo>CCR__c</referenceTo>
    <relationshipLabel>Booking Line Items</relationshipLabel>
    <relationshipName>Booking_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>