force-app/main/default/objects/Booking_Line_Item__c/fields/Commission_Impact__c.field-meta.xml
<CustomField>
    <fullName>Commission_Impact__c</fullName>
    <formula>OR(  ISPICKVAL(Type__c ,&apos;Revenue&apos;),
     ISPICKVAL(Type__c ,&apos;Customer Returns / Refunds&apos;),
     ISPICKVAL(Type__c ,&apos;Partner Referral Fee&apos;), 
     ISPICKVAL(Type__c ,&apos;Non-Payment&apos;),
     AND( 
         ISPICKVAL(Type__c ,&apos;Incorrect Order/Mis-quote&apos;),
          Impacts_Commission__c = True
        ),
     AND( 
         ISPICKVAL(Type__c ,&apos;Change in Booking Policy / De-Risk Decision&apos;),
          Impacts_Commission__c = True
        ),
    AND( 
         ISPICKVAL(Type__c ,&apos;Unpaid Replacement Debooking&apos;),
          Impacts_Commission__c = True
        )
     
 )</formula>
    <label>Commission Impact</label>
    <type>Checkbox</type>
</CustomField>