force-app/main/default/objects/Booking_Line_Item__c/fields/Distributor_Descrepency__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Descrepency__c</fullName>
    <formula>if( (Distributor__c == Booking__r.Distributor__r.Name || Distributor__c == Booking__r.Opportunity__r.Distributor__c ) ,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Descrepency</label>
    <type>Checkbox</type>
</CustomField>