force-app/main/default/objects/Booking_Line_Item__c/fields/Gross_ACV_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_ACV_Amount__c</fullName>
    <label>Gross ACV Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>