force-app/main/default/objects/Booking_Line_Item__c/fields/Gross_Subsumed_Renewal_ACV__c.field-meta.xml
<CustomField>
    <fullName>Gross_Subsumed_Renewal_ACV__c</fullName>
    <label>Gross Renewal Subsumed ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>