force-app/main/default/objects/Booking_Line_Item__c/fields/Impacts_Commission__c.field-meta.xml
<CustomField>
    <fullName>Impacts_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Impacts Commission carried from the CCR</description>
    <label>Impacts Commission</label>
    <type>Checkbox</type>
</CustomField>