force-app/main/default/objects/Booking_Line_Item__c/fields/Impacts_Gross_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Impacts_Gross_Bookings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impacts Gross Bookings</label>
    <type>Checkbox</type>
</CustomField>