force-app/main/default/objects/Booking_Line_Item__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Consumption</fullName>
            </value>
            <value>
                <fullName>Life of Device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>