force-app/main/default/objects/Booking_Line_Item__c/fields/Net_Subsumed_Renewal_ACV__c.field-meta.xml
<CustomField>
    <fullName>Net_Subsumed_Renewal_ACV__c</fullName>
    <label>Net Renewal Subsumed ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>