force-app/main/default/objects/Booking_Line_Item__c/fields/New_Expansion_TCV__c.field-meta.xml
<CustomField>
    <fullName>New_Expansion_TCV__c</fullName>
    <label>Gross New/Expansion TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>