force-app/main/default/objects/Booking_Line_Item__c/fields/Oppty_Trade_Up_Discount__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Trade_Up_Discount__c</fullName>
    <description>FY25SR-497 To store Trade-up Credit TCV</description>
    <label>Trade-up Credit TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>