force-app/main/default/objects/Booking_Line_Item__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To hold corresponding orderItem</description>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Booking Line Items</relationshipLabel>
    <relationshipName>Booking_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>