force-app/main/default/objects/Booking_Line_Item__c/fields/Partner_Referral_Fee__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral_Fee__c</fullName>
    <label>Partner Referral Fee %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>