force-app/main/default/objects/Booking_Line_Item__c/fields/Prepayment_Credit__c.field-meta.xml
<CustomField>
    <fullName>Prepayment_Credit__c</fullName>
    <description>FY25SR-497 To store Prepayment Credit</description>
    <label>Prepayment Credit TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>