force-app/main/default/objects/Booking_Line_Item__c/fields/Product2_Description__c.field-meta.xml
<CustomField>
    <fullName>Product2_Description__c</fullName>
    <label>Product2 Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>