force-app/main/default/objects/Booking_Line_Item__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIR</fullName>
            </value>
            <value>
                <fullName>BASE</fullName>
            </value>
            <value>
                <fullName>CABLE</fullName>
            </value>
            <value>
                <fullName>CEM</fullName>
            </value>
            <value>
                <fullName>CLON</fullName>
            </value>
            <value>
                <fullName>CLOUT</fullName>
            </value>
            <value>
                <fullName>Cluster</fullName>
            </value>
            <value>
                <fullName>EDGE</fullName>
            </value>
            <value>
                <fullName>HPE</fullName>
            </value>
            <value>
                <fullName>Non-Returnable Disk Service</fullName>
            </value>
            <value>
                <fullName>OBJ</fullName>
            </value>
            <value>
                <fullName>POLARIS</fullName>
            </value>
            <value>
                <fullName>R300</fullName>
            </value>
            <value>
                <fullName>R300/R500</fullName>
            </value>
            <value>
                <fullName>R300/R6000</fullName>
            </value>
            <value>
                <fullName>R500</fullName>
            </value>
            <value>
                <fullName>R6000</fullName>
            </value>
            <value>
                <fullName>RBK-AIR</fullName>
            </value>
            <value>
                <fullName>RBK-CLON</fullName>
            </value>
            <value>
                <fullName>RBK-R300/500</fullName>
            </value>
            <value>
                <fullName>RBK-RCDM</fullName>
            </value>
            <value>
                <fullName>RCDM</fullName>
            </value>
            <value>
                <fullName>SFP</fullName>
            </value>
            <value>
                <fullName>Spares</fullName>
            </value>
            <value>
                <fullName>UCS</fullName>
            </value>
            <value>
                <fullName>ASE</fullName>
            </value>
            <value>
                <fullName>DELL</fullName>
            </value>
            <value>
                <fullName>NAS</fullName>
            </value>
            <value>
                <fullName>E1000</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>