force-app/main/default/objects/Booking_Line_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Booking Line Items</relationshipLabel>
    <relationshipName>Booking_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>