force-app/main/default/objects/Booking_Line_Item__c/fields/Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Product_Quantity__c</fullName>
    <label>Product Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>