force-app/main/default/objects/Booking_Line_Item__c/fields/PromoDiscTCV__c.field-meta.xml
<CustomField>
    <fullName>PromoDiscTCV__c</fullName>
    <description>FY25SR-497 To store promo discount TCV</description>
    <label>Promo Discount TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>