force-app/main/default/objects/Booking_Line_Item__c/fields/Subsumed_Renewal_TCV__c.field-meta.xml
<CustomField>
    <fullName>Subsumed_Renewal_TCV__c</fullName>
    <label>Gross Renewal Subsumed TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>