force-app/main/default/objects/Booking_Line_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Customer Returns / Refunds</fullName>
            </value>
            <value>
                <fullName>Change in Booking Policy / De-Risk Decision</fullName>
            </value>
            <value>
                <fullName>Partner Referral Fee</fullName>
            </value>
            <value>
                <fullName>Non-Payment</fullName>
            </value>
            <value>
                <fullName>Unpaid Replacement Debooking</fullName>
            </value>
            <value>
                <fullName>Velocity Partner Program Rebate</fullName>
            </value>
            <value>
                <fullName>Distributor Fee</fullName>
            </value>
            <value>
                <fullName>Incorrect Order/Mis-quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>